--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,6 @@
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
     <script type="text/javascript" src="https://cdn.datatables.net/v/dt/jszip-2.5.0/dt-1.10.21/b-1.6.3/b-colvis-1.6.3/b-flash-1.6.3/b-html5-1.6.3/datatables.min.js"></script>
 
-    
     <title>React App</title>
   </head>
   <body>
@@ -62,24 +61,28 @@
   });
   </script>
 
-<!-- <script>
-  window.onbeforeunload = function (e) {
-    window.localStorage.unloadTime = JSON.stringify(new Date());
+  <script>
+    window.onbeforeunload = function (e) {
+      window.localStorage.unloadTime = JSON.stringify(new Date());
+    };
+      window.onload = function () {
+      let loadTime = new Date();
+      let unloadTime = new Date(JSON.parse(window.localStorage.unloadTime));
+      let refreshTime = loadTime.getTime() - unloadTime.getTime();
+      if(refreshTime>6000){
+      window.localStorage.removeItem("userData");
+    }
+    // console.log(loadTime)
+    // console.log(unloadTime)
+    // console.log(refreshTime)
   };
-    window.onload = function () {
-    let loadTime = new Date();
-    let unloadTime = new Date(JSON.parse(window.localStorage.unloadTime));
-    let refreshTime = loadTime.getTime() - unloadTime.getTime();
-    if(refreshTime>120000){
-    window.localStorage.removeItem("userData");
-  }
-};
-</script> -->
-<script>
-  window.onbeforeunload = function(e){
-    localStorage.removeItem('userData');
-    e.preventDefault();
-  }
-</script>
+  </script>
+    
+  <script>
+    window.onbeforeunload = function() {
+    localStorage.removeItem("userData");
+    return '';
+  };
+  </script>
   </body>
 </html>
